--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -328,6 +328,7 @@ CategoryIconManager.smallImageIcon = icons/smallPicIcon.png
 CategoryIconManager.smallVideoIcon = icons/smallVideoIcon.png
 CategoryIconManager.smallDocumentIcon = icons/smallDocumentIcon.png
 CategoryIconManager.smallOtherIcon = icons/smallOtherIcon.png
+CategoryIconManager.smallTorrentIcon = icons/smallTorrentIcon.png
 CategoryIconManager.smallProgramIconWinVista = icons/smallProgramIcon_winvista.png
 CategoryIconManager.smallProgramIconOSX = icons/smallProgramIcon_osx.png
 CategoryIconManager.smallProgramIconWinXP = icons/smallProgramIcon_winxp.png
