adding robots.txt handling.

--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -381,7 +381,7 @@ log4j.logger.org.limewire.core.impl.search.torrentweb=ALL
 #log4j.logger.org.limewire.geocode=ALL
 #log4j.logger.org.limewire.geocode.CachedGeoLocationImpl=ALL
 #log4j.logger.org.limewire.geocode.GeocoderImpl=ALL
-#log4j.logger.org.limewire.http=ALL
+log4j.logger.org.limewire.http.httpclient.robotstxt=ALL
 #log4j.logger.org.limewire.http.BasicHttpAcceptor=ALL
 #log4j.logger.org.limewire.http.auth=ALL
 #log4j.logger.org.limewire.http.auth.AuthenticationInterceptorImpl=ALL
