--- a/components/common/dependencies.props
+++ b/components/common/dependencies.props
@@ -49,7 +49,7 @@ jorbis.version=
 json.version=20070829
 junit.version=
 jxlayer.version=4.0
-log4j.version=
+log4j.version=20100504
 manekineko.version=
 miglayout.version=3.7-swing
 mozdom4java.version=
