--- a/.classpath
+++ b/.classpath
@@ -164,5 +164,6 @@
 	<classpathentry kind="lib" path="lib/jars/fmj-4-9-2010.jar" sourcepath="lib/sources/fmj-source.zip"/>
 	<classpathentry kind="lib" path="lib/jars/tests/commons-math-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/jars/log4j-20100504.jar"/>
+	<classpathentry kind="lib" path="lib/jars/jl.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
