LWC-5694 - Torrent file info and metadata issues

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -542,6 +542,11 @@ FileInfoBittorrentPanel.selectFont=DIALOG-PLAIN-11
 TorrentSelectorPanel.foreground=#313131
 TorrentSelectorPanel.headerFont=DIALOG-BOLD-13
 
+FileInfoLimitsPanel.foreground=#313131
+FileInfoLimitsPanel.smallFont=DIALOG-NORMAL-11
+FileInfoLimitsPanel.mediumFont=DIALOG-NORMAL-12
+FileInfoLimitsPanel.headerFont=DIALOG-BOLD-17
+
 FileInfoGeneralPanel.foreground=#313131
 FileInfoGeneralPanel.smallFont=DIALOG-NORMAL-11
 FileInfoGeneralPanel.mediumFont=DIALOG-NORMAL-12
