--- a/components/player/ivy.xml
+++ b/components/player/ivy.xml
@@ -10,6 +10,7 @@
         <dependency org="org.limewire" name="common" rev="latest.integration" conf="compile,runtime"/>
         <dependency org="org.limewire" name="player-api" rev="latest.integration" conf="compile,runtime"/>
         
+        <dependency org="none" name="fmj" rev="${fmj.version}" conf="compile,runtime"/>
         <dependency org="none" name="tritonus" rev="${tritonus.version}" conf="compile,runtime"/>        
         <dependency org="none" name="commons-logging" rev="${commons-logging.version}" conf="compile,runtime"/>
         <dependency org="none" name="guice" rev="${guice.version}" conf="compile,runtime"/>
