--- a/components/core-glue/ivy.xml
+++ b/components/core-glue/ivy.xml
@@ -49,7 +49,9 @@
         <dependency org="none" name="httpclient" rev="${httpclient.version}" conf="compile,runtime"/>
         <dependency org="none" name="commons-codec" rev="${commons-codec.version}" conf="compile,runtime"/>
         <dependency org="none" name="jcip-annotations" rev="${jcip-annotations.version}" conf="compile,runtime"/>
-       
+        <dependency org="none" name="json" rev="${json.version}" conf="compile,runtime"/>       
+	    <dependency org="none" name="htmlcleaner" rev="${htmlcleaner.version}" conf="compile,runtime"/>
+
         <dependency org="none" name="tests/org.mortbay.jetty" rev="${org.mortbay.jetty.version}" conf="test"/>
         <dependency org="none" name="tests/javax.servlet" rev="${javax.servlet.version}" conf="test"/>
         <dependency org="org.limewire" name="common" rev="latest.integration" conf="test"/>
