--- a/components/libtorrent/ivy.xml
+++ b/components/libtorrent/ivy.xml
@@ -10,6 +10,7 @@
 	</publications>
 	<dependencies>
 		<dependency org="org.limewire" name="common" rev="latest.integration" conf="compile,runtime" />
+		<dependency org="org.limewire" name="collection" rev="latest.integration" conf="compile,runtime" />
 		<dependency org="org.limewire" name="bittorrent-api" rev="latest.integration" conf="compile,runtime" />
 		<dependency org="org.limewire" name="core-api" rev="latest.integration" conf="compile,runtime" />
 		<dependency org="org.limewire" name="io" rev="latest.integration" conf="compile,runtime" />
