*** empty log message ***

--- a/.classpath
+++ b/.classpath
@@ -88,6 +88,7 @@
 	<classpathentry kind="lib" path="components/mojito-ui/misc/lib/jung-1.7.5.jar"/>
 	<classpathentry kind="lib" path="lib/jars/messages.jar"/>
 	<classpathentry kind="lib" path="lib/jars/compile/messages.jar"/>
+	<classpathentry kind="lib" path="lib/jars/jflac.jar"/>
 	<classpathentry kind="lib" path="lib/jars/jl.jar"/>
 	<classpathentry kind="lib" path="lib/jars/jogg.jar"/>
 	<classpathentry kind="lib" path="lib/jars/jorbis.jar"/>
@@ -164,6 +165,7 @@
 	<classpathentry kind="lib" path="lib/jars/TimingFramework-1.0.jar" sourcepath="lib/sources/TimingFramework-1.0-src.zip"/>
 	<classpathentry kind="lib" path="lib/jars/tests/commons-math-1.2.jar"/>
 	<classpathentry kind="lib" path="lib/jars/log4j-20100504.jar"/>
-	<classpathentry kind="lib" path="lib/jars/fmj-4-9-2010.jar"/>
+<classpathentry kind="lib" path="lib/jars/fmj-20091008-23.jar" sourcepath="lib/sources/fmj-source.zip"/>
+	<classpathentry kind="lib" path="lib/jars/zzaudioformats.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
