--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -110,6 +110,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.bittorrent.LimeWireTorrentManager=ALL
 #log4j.logger.com.limegroup.bittorrent.LimeWireTorrentSettings=ALL
 #log4j.logger.com.limegroup.bittorrent.TorrentDHTScheduler=ALL
+#log4j.logger.com.limegroup.bittorrent.TorrentTrackerScraperImpl=ALL
 #log4j.logger.com.limegroup.bittorrent.TorrentUploadManager=ALL
 #log4j.logger.com.limegroup.gnutella=ALL
 #log4j.logger.com.limegroup.gnutella.AcceptorImpl=ALL
@@ -138,6 +139,8 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.QueryUnicasterTest=ALL
 #log4j.logger.com.limegroup.gnutella.RequestCache=ALL
 #log4j.logger.com.limegroup.gnutella.ResponseFactoryImpl=ALL
+#log4j.logger.com.limegroup.gnutella.ResponseVerifierImpl=ALL
+#log4j.logger.com.limegroup.gnutella.SecureIdDatabaseStore=ALL
 #log4j.logger.com.limegroup.gnutella.SpamServicesImpl=ALL
 #log4j.logger.com.limegroup.gnutella.StandardMessageRouter=ALL
 #log4j.logger.com.limegroup.gnutella.UDPPingerImpl=ALL
@@ -220,12 +223,16 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.downloader.serial.conversion.OldDownloadsTest=ALL
 #log4j.logger.com.limegroup.gnutella.filters=ALL
 #log4j.logger.com.limegroup.gnutella.filters.AbstractIPFilter=ALL
+#log4j.logger.com.limegroup.gnutella.filters.CompositeFilter=ALL
+#log4j.logger.com.limegroup.gnutella.filters.DuplicateFilter=ALL
 #log4j.logger.com.limegroup.gnutella.filters.HostileFilter=ALL
 #log4j.logger.com.limegroup.gnutella.filters.LocalIPFilter=ALL
+#log4j.logger.com.limegroup.gnutella.filters.RepetitiveQueryFilter=ALL
+#log4j.logger.com.limegroup.gnutella.filters.SameAltLocsFilter=ALL
 #log4j.logger.com.limegroup.gnutella.filters.URNBlacklistManagerImpl=ALL
 #log4j.logger.com.limegroup.gnutella.filters.URNFilterImpl=ALL
 #log4j.logger.com.limegroup.gnutella.filters.response=ALL
-#log4j.logger.com.limegroup.gnutella.filters.response.CompoundResponseFilter=ALL
+#log4j.logger.com.limegroup.gnutella.filters.response.CompoundFilter=ALL
 #log4j.logger.com.limegroup.gnutella.filters.response.MutableGUIDFilter=ALL
 #log4j.logger.com.limegroup.gnutella.guess=ALL
 #log4j.logger.com.limegroup.gnutella.guess.OnDemandUnicaster=ALL
@@ -257,7 +264,9 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.lws.server.LowLevelLWSDownloadTest=ALL
 #log4j.logger.com.limegroup.gnutella.lws.server.SimpleWebServer=ALL
 #log4j.logger.com.limegroup.gnutella.malware=ALL
+#log4j.logger.com.limegroup.gnutella.malware.DangerousFileTypeEncoder=ALL
 #log4j.logger.com.limegroup.gnutella.malware.FileExtensionChecker=ALL
+#log4j.logger.com.limegroup.gnutella.malware.MimeTypeEncoder=ALL
 #log4j.logger.com.limegroup.gnutella.malware.NFOFile=ALL
 #log4j.logger.com.limegroup.gnutella.malware.VirusDefinitionDownloaderImpl=ALL
 #log4j.logger.com.limegroup.gnutella.malware.VirusDefinitionManagerImpl=ALL
@@ -335,15 +344,17 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.xml.LimeXMLUtils=ALL
 #log4j.logger.com.limegroup.gnutella.xml.XMLParsingUtils=ALL
 #log4j.logger.org.limewire.activation.impl=ALL
-#log4j.logger.org.limewire.activation.impl.ActivationCommunicatorImpl=ALL
 #log4j.logger.org.limewire.activation.impl.ActivationManagerImpl=ALL
 #log4j.logger.org.limewire.activation.impl.ActivationResponseFactoryImpl=ALL
 #log4j.logger.org.limewire.activation.serial=ALL
 #log4j.logger.org.limewire.activation.serial.ActivationSerializerImpl=ALL
 #log4j.logger.org.limewire.bittorrent=ALL
 #log4j.logger.org.limewire.bittorrent.BTDataImpl=ALL
+#log4j.logger.org.limewire.bittorrent.TorrentScrapeSchedulerImpl=ALL
 #log4j.logger.org.limewire.collection=ALL
 #log4j.logger.org.limewire.collection.IntervalSetTest=ALL
+#log4j.logger.org.limewire.core.impl=ALL
+#log4j.logger.org.limewire.core.impl.TorrentFactoryImpl=ALL
 #log4j.logger.org.limewire.core.impl.browse=ALL
 #log4j.logger.org.limewire.core.impl.browse.FriendBrowseDownloadRUDPTest=ALL
 #log4j.logger.org.limewire.core.impl.download.listener=ALL
@@ -366,8 +377,15 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.org.limewire.core.impl.mozilla=ALL
 #log4j.logger.org.limewire.core.impl.mozilla.LimeMozillaDownloadManagerListenerImpl=ALL
 #log4j.logger.org.limewire.core.impl.mozilla.LimeMozillaDownloadProgressListenerImpl=ALL
+#log4j.logger.org.limewire.core.impl.rest=ALL
+#log4j.logger.org.limewire.core.impl.rest.CoreGlueRestService=ALL
 #log4j.logger.org.limewire.core.impl.search.browse=ALL
 #log4j.logger.org.limewire.core.impl.search.browse.MultipleBrowseSearch=ALL
+#log4j.logger.org.limewire.core.impl.search.torrentweb=ALL
+#log4j.logger.org.limewire.core.impl.search.torrentweb.TorrentRobotsTxtImpl=ALL
+#log4j.logger.org.limewire.core.impl.search.torrentweb.TorrentUriDatabaseStore=ALL
+#log4j.logger.org.limewire.core.impl.search.torrentweb.TorrentUriPrioritizerImpl=ALL
+#log4j.logger.org.limewire.core.impl.search.torrentweb.TorrentWebSearch=ALL
 #log4j.logger.org.limewire.friend.impl=ALL
 #log4j.logger.org.limewire.friend.impl.DefaultFriendAuthenticator=ALL
 #log4j.logger.org.limewire.friend.impl.MutableFriendManagerImpl=ALL
@@ -388,6 +406,8 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.org.limewire.http.entity.FilePieceReader=ALL
 #log4j.logger.org.limewire.http.httpclient=ALL
 #log4j.logger.org.limewire.http.httpclient.HttpClientUtils=ALL
+#log4j.logger.org.limewire.http.httpclient.robots=ALL
+#log4j.logger.org.limewire.http.httpclient.robots.RobotsTxt=ALL
 #log4j.logger.org.limewire.http.reactor=ALL
 #log4j.logger.org.limewire.http.reactor.DefaultDispatchedIOReactor=ALL
 #log4j.logger.org.limewire.http.reactor.HttpChannel=ALL
@@ -405,8 +425,6 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.org.limewire.lws.server.LWSDispatcherSupport=ALL
 #log4j.logger.org.limewire.mojito=ALL
 #log4j.logger.org.limewire.mojito.Context=ALL
-#log4j.logger.org.limewire.mojito.concurrent=ALL
-#log4j.logger.org.limewire.mojito.concurrent.DHTFutureTask=ALL
 #log4j.logger.org.limewire.mojito.db=ALL
 #log4j.logger.org.limewire.mojito.db.DatabaseCleaner=ALL
 #log4j.logger.org.limewire.mojito.db.StorableModelManager=ALL
@@ -437,7 +455,6 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.org.limewire.mojito.manager=ALL
 #log4j.logger.org.limewire.mojito.manager.BootstrapProcess=ALL
 #log4j.logger.org.limewire.mojito.manager.BootstrapWorker=ALL
-#log4j.logger.org.limewire.mojito.manager.StoreProcess=ALL
 #log4j.logger.org.limewire.mojito.manager.StoreProcess$GetSecurityTokenHandler=ALL
 #log4j.logger.org.limewire.mojito.routing=ALL
 #log4j.logger.org.limewire.mojito.routing.BucketRefresher=ALL
@@ -475,9 +492,13 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.org.limewire.nio.timeout=ALL
 #log4j.logger.org.limewire.nio.timeout.StalledUploadWatchdog=ALL
 #log4j.logger.org.limewire.nio.timeout.TimeoutController=ALL
+#log4j.logger.org.limewire.player.impl=ALL
+#log4j.logger.org.limewire.player.impl.LimeWirePlayer=ALL
 #log4j.logger.org.limewire.promotion=ALL
 #log4j.logger.org.limewire.promotion.PromotionBinderFactoryImpl=ALL
 #log4j.logger.org.limewire.promotion.SearcherDatabaseImpl=ALL
+#log4j.logger.org.limewire.rest.oauth=ALL
+#log4j.logger.org.limewire.rest.oauth.OAuthRequest=ALL
 #log4j.logger.org.limewire.rudp=ALL
 #log4j.logger.org.limewire.rudp.DataWindow=ALL
 #log4j.logger.org.limewire.rudp.DefaultMessageDispatcher=ALL
@@ -495,22 +516,6 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.org.limewire.security.certificate.CertificateVerifierImpl=ALL
 #log4j.logger.org.limewire.security.certificate.HashLookupProviderDNSTXTImpl=ALL
 #log4j.logger.org.limewire.security.certificate.KeyStoreProviderImpl=ALL
-#log4j.logger.org.limewire.swarm.file=ALL
-#log4j.logger.org.limewire.swarm.file.FileCoordinatorImpl=ALL
-#log4j.logger.org.limewire.swarm.file.SwarmWriteJobImpl=ALL
-#log4j.logger.org.limewire.swarm.file.selection=ALL
-#log4j.logger.org.limewire.swarm.file.selection.BiasedRandomDownloadStrategy=ALL
-#log4j.logger.org.limewire.swarm.file.selection.RandomDownloadStrategy=ALL
-#log4j.logger.org.limewire.swarm.http=ALL
-#log4j.logger.org.limewire.swarm.http.SwarmHttpSourceDownloader=ALL
-#log4j.logger.org.limewire.swarm.http.SwarmHttpUtils=ALL
-#log4j.logger.org.limewire.swarm.http.listener=ALL
-#log4j.logger.org.limewire.swarm.http.listener.SwarmHttpContentListener=ALL
-#log4j.logger.org.limewire.swarm.impl=ALL
-#log4j.logger.org.limewire.swarm.impl.LoggingSwarmCoordinatorListener=ALL
-#log4j.logger.org.limewire.swarm.impl.LoggingSwarmSourceListener=ALL
-#log4j.logger.org.limewire.swarm.impl.ReconnectingSwarmSourceListener=ALL
-#log4j.logger.org.limewire.swarm.impl.SwarmerImpl=ALL
 #log4j.logger.org.limewire.ui.support=ALL
 #log4j.logger.org.limewire.ui.support.DeadlockSupport=ALL
 #log4j.logger.org.limewire.ui.support.RemoteClientInfo=ALL
@@ -536,6 +541,10 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.org.limewire.ui.swing.mainframe.MainPanel=ALL
 #log4j.logger.org.limewire.ui.swing.nav=ALL
 #log4j.logger.org.limewire.ui.swing.nav.NavigatorImpl=ALL
+#log4j.logger.org.limewire.ui.swing.player=ALL
+#log4j.logger.org.limewire.ui.swing.player.JavaSoundPlayer=ALL
+#log4j.logger.org.limewire.ui.swing.player.MediaPlayerFactoryImpl=ALL
+#log4j.logger.org.limewire.ui.swing.player.PlayerMediatorImpl=ALL
 #log4j.logger.org.limewire.ui.swing.search=ALL
 #log4j.logger.org.limewire.ui.swing.search.FriendPresenceActionsImpl=ALL
 #log4j.logger.org.limewire.ui.swing.search.model=ALL
@@ -560,6 +569,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.org.limewire.util=ALL
 #log4j.logger.org.limewire.util.ConverterObjectInputStream=ALL
 #log4j.logger.org.limewire.util.FileUtils=ALL
+#log4j.logger.org.limewire.util.JmxUtils=ALL
 #log4j.logger.org.limewire.util.OSUtils=ALL
 #log4j.logger.org.limewire.util.SystemUtils=ALL
 #log4j.logger.org.limewire.util.XMLUtils=ALL
