LWC-5726 - Bolds title text of limits file info

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -565,6 +565,9 @@ FileInfoSharingPanel.headerFont= DIALOG-BOLD-17
 FileInfoSharingPanel.publicIcon = icons/file_sharedlist_p2p.png
 FileInfoSharingPanel.listSharedIcon = icons/file_sharedlist_friend.png
 
+FileInfoLimitsPanel.foreground=#313131
+FileInfoLimitsPanel.headerFont=DIALOG-BOLD-17
+
 FileInfoPiecesPanel.foreground = #313131
 FileInfoPiecesPanel.smallFont = DIALOG-NORMAL-11
 FileInfoPiecesPanel.legendBackground = #e2e2e2
