--- a/components/common/src/main/resources/log4j.properties
+++ b/components/common/src/main/resources/log4j.properties
@@ -17,7 +17,7 @@
 ########
 
 # Set the root loggers
-log4j.rootLogger=OFF, stdout
+log4j.rootLogger=OFF, socket
 
 
 ######
@@ -264,6 +264,7 @@ log4j.appender.stdout.layout.ConversionPattern=%-6r %-5p [%t] %c{2}.%M - %m%n
 #log4j.logger.com.limegroup.gnutella.lws.server.LowLevelLWSDownloadTest=ALL
 #log4j.logger.com.limegroup.gnutella.lws.server.SimpleWebServer=ALL
 #log4j.logger.com.limegroup.gnutella.malware=ALL
+log4j.logger.com.limegroup.gnutella.spoon=ALL
 #log4j.logger.com.limegroup.gnutella.malware.DangerousFileTypeEncoder=ALL
 #log4j.logger.com.limegroup.gnutella.malware.FileExtensionChecker=ALL
 #log4j.logger.com.limegroup.gnutella.malware.MimeTypeEncoder=ALL
