revised layout for auto update messages

--- a/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
+++ b/private-components/swingui/src/main/resources/org/limewire/ui/swing/mainframe/resources/AppFrame.properties
@@ -1203,6 +1203,8 @@ ColoredBusyLabel.darkGrey = #545454
 AutoUpdateMessageLayer.backgroundIcon = icons/viral_nag.png
 AutoUpdateMessageLayer.backgroundColor = #f4f4f4
 AutoUpdateMessageLayer.foregroundColor = #000000
+AutoUpdateMessageLayer.topFont = DIALOG-PLAIN-14
+AutoUpdateMessageLayer.contentFont = DIALOG-PLAIN-12
 
 ##############################################################
 # Props for components that are no longer used or very stale
